# Akhenaten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_macos.sh  index.html  parsed_text_mm.txt  update-workspace-linux.sh  update-workspace-mac.sh  update_binary_mac.sh  update_binary_windows.cmd
assets/: 40X--EnPBSVG.js  40X-42sKHNCT.js  40X-8j8LBnx9.js  40X-BAEtqp3g.js  40X-BJ95NaNx.js  40X-BgURn5YA.js  40X-BoWw5p05.js  40X-Brf5ru5o.js  40X-C66PJFN2.js  40X-CCl-Rhsu.js  40X-CHbLWkUe.js  40X-CQOImCMd.js  40X-CTqqUoeM.js  40X-CZzCl7eQ.js  40X-CkOm6FnA.js  40X-CnS5l-oo.js  40X-D-7aya6n.js  40X-D1AHDoiI.js  40X-DKd7DwAD.js  40X-DXBjPQEL.js  40X-DhHj8_j5.js  40X-Dq0a-HOK.js  40X-PqqUFRyq.js  40X-t1_3em_w.js  50X-5wKc1Byt.js  50X-BBqO1elD.js  50X-BXfEEg4i.js  50X-BcNVOoZH.js  50X-BrILe1Zz.js  50X-BtjzvSxF.js  50X-BtkuJFHu.js  50X-C5V8DiQb.js  50X-CARXhGFM.js  50X-CTiGI8XQ.js  50X-CnlIET-f.js  50X-CoJre9iy.js  50X-CsoW8_FG.js  50X-DmbWwbel.js  50X-DuhsBqiP.js  50X-DviHCDl4.js  (+104 more)
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
ext/gpupixel/: CMakeLists.txt
ext/gpupixel/core/: framebuffer.cc  framebuffer.h  framebuffer_cache.cc  framebuffer_cache.h  gl_program.cc  gl_program.h  gpupixel.h  gpupixel_context.cc  gpupixel_context.h  gpupixel_macros.h  opengl3_loader.h
ext/gpupixel/filter/: bilateral_filter.cc  bilateral_filter.h  filter.cc  filter.h  filter_group.cc  filter_group.h  grayscale_filter.h
ext/gpupixel/source/: source.cc  source.h  source_image.cc  source_image.h
ext/gpupixel/utils/: math_toolbox.cc  math_toolbox.h  util.cc  util.h
res/: metainfo.xml
(+1159 files in other folders)
